# metmuseum-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: run_tests.yml
metmuseum/: __init__.py  metmuseum.py
metmuseum/adapters/: __init__.py  aiohttp_response_adapter.py
metmuseum/gateways/: __init__.py  aiohttp_gateway.py  http_gateway.py
metmuseum/responses/: __init__.py  response.py
metmuseum/types/: __init__.py
metmuseum/types/exceptions/: __init__.py  api_exception.py  client_exception.py  server_exception.py
metmuseum/types/models/: __init__.py  department_element.py  object_constituent.py  object_dimensions.py  object_measurements.py  object_measurementsElement.py  object_tag.py
metmuseum/types/responses/: __init__.py  departments_response.py  object_response.py  objects_response.py  search_response.py
tests/: test_aiohttp_gateway_with_httpbin.py  test_facade_with_fake_data.py  test_facade_with_real_data.py
tests/mocks/: __init__.py  fake_gateway.py  fake_response.py
