[project]
name = "metmuseum"
version = "0.1.0"
description = "Metropolitan Museum API Client Library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9.2",
]

[project.urls]
repository = "https://github.com/ulbwa/metmuseum-python"

[tool.ruff]
lint.select = ["E", "F", "W", "Q", "I", "B"]

lint.fixable = ["ALL"]
lint.unfixable = []

line-length = 89
