[project]
name = "metmuseum"
version = "0.1.0"
description = "Metropolitan Museum API Client Library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10.10",
    "pydantic>=2.9.2",
]

[project.urls]
repository = "https://github.com/ulbwa/metmuseum-python"

[tool.uv]
dev-dependencies = [
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
lint.select = ["E", "F", "W", "Q", "I", "B"]

lint.fixable = ["ALL"]
lint.unfixable = []

line-length = 89

[tool.pytest.ini_options]
testpaths = [ "tests" ]
asyncio_mode = "auto"
